--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 body {
-  background-color: bisque;
+  background-color: rgb(247, 233, 217);
+}
+
+#Container {
+  box-shadow: 2px 2px 10px rgb(139, 137, 137);
+  background-color: white;
+}
+
+.list-item-style {
+  background-color: white;
 }
