--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(247, 240, 232);
+  min-height: 100vh;
 }
 
 #Container {
@@ -11,4 +12,18 @@ body {
   background-color: white;
   cursor: move;
   user-select: none;
+  max-height: 60px;
+}
+
+.del-button-style {
+  position: absolute;
+  bottom: 8px;
+  left: 18vw;
+}
+p {
+  max-width: max-content;
+}
+.checkbox-style {
+  position: absolute;
+  bottom: 17px;
 }
